MF-336 - Remove org from policy endpoints. (#337)
* MF-336 - Remove org from policy endpoints.


* MF-336 - Remove redundant check


* MF-336 - Fix auth for acces group


* MF-336 - Fix swagger documentation


* MF-336 - Fix comment


---------
