# api/openapi/auth.yml
@@ -266,15 +266,14 @@ paths:
           description: Failed due to non existing organization.
         '500':
           $ref: "#/components/responses/ServiceError"
-  /orgs/{orgId}/groups/{groupId}:
+  /groups/{groupId}/members:
     post:
       summary: Create group policies.
       description: |
-        Create group members policies for the given org, group and member IDs.
+        Create group members policies for the given group and member IDs.
       tags:
         - auth
       parameters:
-        - $ref: "#/components/parameters/OrgId"
         - $ref: "#/components/parameters/GroupId"
       requestBody:
         $ref: "#/components/requestBodies/MembersPoliciesReq"
@@ -289,51 +288,6 @@ paths:
           description: Failed due to non existing organization or group.
         '500':
           $ref: "#/components/responses/ServiceError"
-    put:
-      summary: Update group policies.
-      description: |
-        Updates group members policies identified by org, group and member IDs.
-      tags:
-        - auth
-      parameters:
-        - $ref: "#/components/parameters/OrgId"
-        - $ref: "#/components/parameters/GroupId"
-      requestBody:
-        $ref: "#/components/requestBodies/MembersPoliciesReq"
-      responses:
-        '200':
-          description: Group policies updated.
-        '400':
-          description: Failed due to malformed JSON.
-        '401':
-          description: Missing or invalid access token provided.
-        '404':
-          description: Failed due to non existing organization or group.
-        '500':
-          $ref: "#/components/responses/ServiceError"
-    patch:
-      summary: Remove group policies.
-      description: |
-          Removes group members policies identified by org, group and member IDs.
-      tags:
-        - auth
-      parameters:
-        - $ref: "#/components/parameters/OrgId"
-        - $ref: "#/components/parameters/GroupId"
-      requestBody:
-        $ref: "#/components/requestBodies/RemovePoliciesReq"
-      responses:
-        '204':
-          description: Policies removed.
-        '400':
-          description: Failed due to malformed JSON.
-        '401':
-          description: Missing or invalid access token provided.
-        '404':
-          description: Failed due to non existing organization or group.
-        '500':
-          $ref: "#/components/responses/ServiceError"
-  /groups/{groupId}/members:
     get:
       summary: Retrieves group members policies.
       description: |
@@ -351,6 +305,48 @@ paths:
           description: Missing or invalid access token provided.
         '404':
           description: Organization or group does not exist.
+        '500':
+          $ref: "#/components/responses/ServiceError"
+    put:
+      summary: Update group policies.
+      description: |
+        Updates group members policies identified by group and member IDs.
+      tags:
+        - auth
+      parameters:
+        - $ref: "#/components/parameters/GroupId"
+      requestBody:
+        $ref: "#/components/requestBodies/MembersPoliciesReq"
+      responses:
+        '200':
+          description: Policies updated.
+        '400':
+          description: Failed due to malformed JSON.
+        '401':
+          description: Missing or invalid access token provided.
+        '404':
+          description: Failed due to non existing organization or group.
+        '500':
+          $ref: "#/components/responses/ServiceError"
+    patch:
+      summary: Remove group policies.
+      description: |
+          Removes group members policies identified by group and member IDs.
+      tags:
+        - auth
+      parameters:
+        - $ref: "#/components/parameters/GroupId"
+      requestBody:
+        $ref: "#/components/requestBodies/RemovePoliciesReq"
+      responses:
+        '204':
+          description: Policies removed.
+        '400':
+          description: Failed due to malformed JSON.
+        '401':
+          description: Missing or invalid access token provided.
+        '404':
+          description: Failed due to non existing organization or group.
         '500':
           $ref: "#/components/responses/ServiceError"
   /orgs/{orgId}/groups:
@@ -785,6 +781,9 @@ components:
                 type: string
                 format: uuid
                 description: Unique member identifier generated by the service
+              email:
+                type: string
+                description: Member email.
               policy:
                 type: string
                 description: Member policy in the group.
